--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Sahil-pillania/MERN_website#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
   }
 }
