JWT token storing into mongodb

--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,3 @@
 DATABASE=mongodb+srv://sahil:Sahil1234@cluster0.cxi2awi.mongodb.net/mernwebsite?retryWrites=true&w=majority
 PORT=5000
+SECRET_KEY=MYNAMEISSAHILPILLANIASAHILPILLANIA
