--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "concurrently": "^7.5.0",
+    "cookie-parser": "^1.4.6",
     "mongoose": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
