--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "client",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,11 +10,12 @@
     "bootstrap": "^5.2.2",
     "concurrently": "^7.5.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "mongoose": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\" \"nodemon ../server/app.js\""
+    "both": "concurrently --kill-others-on-fail \"npm run start\" \"nodemon ../server/app.js\""
   },
   "eslintConfig": {
     "extends": [
